--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Our announce</title>
 </head>
 <body>
-    HELLO! WE ARE CURRENTLY WORKING HERE...!
+    <section>
+
+    </section>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
 </body>
 </html>
