more configs added

--- a/src/pages/client_1/index.html
+++ b/src/pages/client_1/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style/css/main.css">
     <title>Our announce</title>
 </head>
 <body>
-    <main class="main-page_container">
-        <section class="main-sect">
-            PUBLICA AQUÍ TUS INVITACIONES!
-        </section>
-    </main>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
 </body>
 </html>
