--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Work+Sans:wght@100;200;300;500&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style/css/main.css">
     <title>Our announce</title>
 </head>
 <body>
+    <head> 
+
+    </head>
     <main class="main-page_container">
-        <section class="main-sect">
-            PUBLICA AQUÍ TUS INVITACIONES!
+        <section class="main-sectn">
+            <header class="square-element">
+                PUBLICA AQUÍ TUS INVITACIONES!
+            </header>
         </section>
     </main>
+    <footer class="footer-section">
+        &#169; 2023 | Designed & coded with &#9749; and &#128155; by navarrowebdev
+    </footer>
 </body>
 </html>
