first model of the landing page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="src/style/css/main.css">
     <title>Our announce</title>
 </head>
-<body>
+<body class="the-body">
     <head> 
 
     </head>
