--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <footer class="footer-section">
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by navarrowebdev
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
