--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 
     </head>
     <main class="main-page_container">
-        <section class="main-sectn">
+        <section class="main-sectn" id="main-page">
             <header class="square-element">
                 PUBLICA AQUÍ TUS INVITACIONES!
             </header>
+
+            <a href="/client">client 1</a>
         </section>
     </main>
     <footer class="footer-section">
-        &#169; 2023 | Designed & coded with &#9749; and &#128155; by navarrowebdev
+        &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
     <script src="index.js"></script>
 </body>
