--- a/src/pages/client.html
+++ b/src/pages/client.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <section>
-        client
+        elemento 1
     </section>
     <section>
-
+        elemento 2
     </section>
     <section>
-
+        elemento 3
     </section>
 </body>
 </html>
