--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Work+Sans:wght@100;200;300;500&family=Zen+Dots&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/style/css/main.css">
+    <link rel="stylesheet" href="style/css/main.css">
     <title>Our announce</title>
 </head>
 <body class="the-body">
@@ -26,6 +26,6 @@
     <footer class="footer-section">
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
-    <script src="index.js"></script>
+    <script type="module" src="/src/js/index.js"></script>
 </body>
 </html>
