--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,12 @@
             </header>
 
             <a href="/client">client 1</a>
+            <a href="/static">client 2</a>
         </section>
     </main>
     <footer class="footer-section">
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
-    <script type="module" src="/src/js/index.js"></script>
+    <script type="module" src="../index.js"></script>
 </body>
 </html>
