--- a/src/pages/client.html
+++ b/src/pages/client.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our announce</title>
+    <meta name="viewport" content="width=client, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <section>
-        elemento 1
-    </section>
-    <section>
-        elemento 2
-    </section>
-    <section>
-        elemento 3
-    </section>
+    CLIENT!!!
 </body>
 </html>
