--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
     <footer class="footer-section">
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
-    <script type="module" src="../index.js"></script>
+    <!-- <script type="module" src="../index.js"></script> -->
 </body>
 </html>
