--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Work+Sans:wght@100;200;300;500&family=Zen+Dots&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/css/main.css">
+    <link rel="stylesheet" href="src/style/css/main.css">
     <title>Our announce</title>
 </head>
 <body class="the-body">
     <head> 
 
     </head>
-    <main class="main-page_container">
-        <section class="main-sectn" id="main-page">
+    <main class="main-page_container" id="main-page">
+        <section class="main-sectn">
             <header class="square-element">
                 PUBLICA AQUÍ TUS INVITACIONES!
             </header>
 
-            <a href="/client">client 1</a>
+            <a href="/client" onclick="ROUTER.load('client')">client</a>
             <a href="/static">client 2</a>
         </section>
     </main>
     <footer class="footer-section">
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
-    <!-- <script type="module" src="../index.js"></script> -->
+    <script src="./src/routes/router.js"></script> 
+    <script src="./src/routes/routes.js"></script> 
+    <script src="./src/routes/index.js"></script> 
 </body>
 </html>
