--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
             <header class="square-element">
                 PUBLICA AQUÍ TUS INVITACIONES!
             </header>
-
-            <a href="/client" onclick="ROUTER.load('client')">client</a>
+        </section>
+        <section>
+            OTRA SECCION
+        </section>
+        <section>
+            OTRA SECCION
         </section>
     </main>
     <footer class="footer-section">
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
-    <script src="./src/routes/router.js"></script> 
+    <!-- <script src="./src/routes/router.js"></script> 
     <script src="./src/routes/routes.js"></script> 
-    <script src="./src/routes/index.js"></script> 
+    <script src="./src/routes/index.js"></script>  -->
 </body>
 </html>
