--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 
     </head>
     <main class="main-page_container" id="main-page">
-        <section class="main-sectn">
+        <section class="sctn sctn-1">
             <header class="square-element">
                 PUBLICA AQUÍ TUS INVITACIONES!
             </header>
         </section>
-        <section>
+
+        <section class="sctn sctn-2">
             OTRA SECCION
         </section>
-        <section>
+
+        <section class="sctn sctn-3">
             OTRA SECCION
         </section>
     </main>
