--- a/index.html
+++ b/index.html
@@ -6,34 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Work+Sans:wght@100;200;300;500&family=Zen+Dots&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Parisienne&family=Passions+Conflict&family=Work+Sans:wght@100;200;300;500&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style/css/main.css">
     <title>Our announce</title>
 </head>
 <body class="the-body">
-    <head> 
+    <main>
+        <section class="sctn sctn1">
+            <img class="elmnt elmnt_1" src="src/style/elements/recurso_1.png" alt="">
+            <img class="elmnt elmnt_2" src="src/style/elements/recurso_2.png" alt="">
+           
+            <div class="main_title">
+                <p>
+                    Te invitamos a celebrar nuestra boda
+                </p>
+                <h1>
+                    Fulanito & Fulanita
+                </h1>
+            </div>
 
-    </head>
-    <main class="main-page_container" id="main-page">
-        <section class="sctn sctn-1">
-            <header class="square-element">
-                PUBLICA AQUÍ TUS INVITACIONES!
-            </header>
         </section>
-
-        <section class="sctn sctn-2">
-            OTRA SECCION
-        </section>
-
-        <section class="sctn sctn-3">
-            OTRA SECCION
+        <section>
+            second section
         </section>
     </main>
     <footer class="footer-section">
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
-    <!-- <script src="./src/routes/router.js"></script> 
-    <script src="./src/routes/routes.js"></script> 
-    <script src="./src/routes/index.js"></script>  -->
 </body>
 </html>
