--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
                     Fulanito & Fulanita
                 </h1>
             </div>
+            <div class="text_complement">
+                <p>
+                    Lunes
+                </p>
+                <p>
+                 00 Enero de 0000
+                </p>
+                <p>
+                    A las 00:00 Am
+                </p>
+                <p>
+                    LUGAR DEL EVENTO
+                </p>
+            </div>
+            <img class="elmnt elmnt_3" src="src/style/elements/recurso_3.png" alt="">
 
         </section>
         <section>
