--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     A las 00:00 Am
                 </p>
                 <p>
-                    LUGAR DEL EVENTO
+                    LUGAR: CALLE FALSA 123
                 </p>
             </div>
             <img class="elmnt elmnt_3" src="src/style/elements/recurso_3.png" alt="">
