--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
             <img class="elmnt elmnt_3" src="src/style/elements/recurso_3.png" alt="">
 
         </section>
-        <section>
+        <section class="sctn sctn2">
+            <img class="elmnt elmnt_4 elmnt_4_left" src="src/style/elements/recurso_4.png" alt="">
+            <img class="elmnt elmnt_5 elmnt_5_left" src="src/style/elements/recurso_5.png" alt="">
+            <img class="elmnt elmnt_4 elmnt_4_right" src="src/style/elements/recurso_4.png" alt="">
+            <img class="elmnt elmnt_5 elmnt_5_right" src="src/style/elements/recurso_5.png" alt="">
+            <!-- <img src="" alt=""> -->
             second section
         </section>
     </main>
