--- a/index.html
+++ b/index.html
@@ -46,20 +46,18 @@
             <img class="elmnt elmnt_5 elmnt_5_left" src="src/style/elements/recurso_5.png" alt="">
             <img class="elmnt elmnt_4 elmnt_4_right" src="src/style/elements/recurso_4.png" alt="">
             <img class="elmnt elmnt_5 elmnt_5_right" src="src/style/elements/recurso_5.png" alt="">
-            <!-- <img src="" alt=""> -->
-            second section
+
         </section>
-        <section>
+        <section class="sctn sctn-map">
             <div class="mapouter">
                 <div class="gmap_canvas">
-                    <iframe width="300" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Maicao%20la%20Guajira&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=cartagena&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     <a href="https://2piratebay.org"></a>
-                    <br>
-                    <style>.mapouter{position:relative;text-align:right;height:500px;width:300px;}</style>
+                    <br>      
                     <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
-                    <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:300px;}</style>
                 </div>
             </div>
+            <!-- <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=cartagena&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2piratebay.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div> -->
         </section>
     </main>
     <footer class="footer-section">
