test images and proportion on containr

--- a/index.html
+++ b/index.html
@@ -114,12 +114,18 @@
                 </g>
               </svg>
               
-            <div class="first-container">
-                <h1  class="main-title">
-                    Fulanito <span class="middle">&</span> Fulanita
-                </h1>
+            <div class="first-container">  
+                <div class="text-card_container">
+                    <h1  class="main-tittle">
+                        Fulanito <br><span class="middle">&</span><br> Fulanita
+                    </h1>
+                </div>
+                <div class="img-card_container">
+                    <img class="img-card" src="src/style/couple/rings.jpg" alt="">
+                </div>          
+
             </div>
-            
+
             <svg class="corners crnr-dwn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 101.25 61.88">
                 <defs>
                   <style>
