flower corner added

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="first-container">  
                 <div class="corner-flower">
                     <!-- <img class="flwr_1" src="src/style/elements/flwr-1.svg" alt=""> -->
-                    <svg viewBox="0 0 52 69">
+                    <!-- <svg viewBox="0 0 52 69">
                         <g data-name="Capa 2">
                           <g data-name="Layer 5">
                             <path fill="#f2e1c2" d="M49,50.88l-.19.18c-.12,0-.19.14-.32.1a1.48,1.48,0,0,0-.25-.34c-.15-.11,0-.25,0-.36-.16.26-.33.24-.5,0a1.26,1.26,0,0,1-.13-.26.6.6,0,0,1,0-.23c0-.14.07-.29.12-.43a.12.12,0,0,1,.14,0,.34.34,0,0,1-.14-.39.42.42,0,0,1,0-.1c.13,0,.11-.14.06-.24-.14-.3.19-.53.14-.82a.23.23,0,0,1,0-.16l.11-.14c.12,0,.17-.23.34-.17a.6.6,0,0,1,.28.55c-.29.14-.4.32-.17.61a.26.26,0,0,1,0,.38.13.13,0,0,1-.18,0,.72.72,0,0,1,.22.41,2.54,2.54,0,0,1,0,.39c0,.12.08.24.11.36s0,.11.07,0,.27,0,.35.11.11.28,0,.4S49,50.84,49,50.88Z"/>
@@ -6472,7 +6472,8 @@
                             <path fill="#750005" d="M26.44,26.43v-.26c.09.07.24.12.09.26Z"/>
                           </g>
                         </g>
-                    </svg>
+                    </svg> -->
+                    <img class="flwr_1"  src="src/style/elements/Recurso 4flwr.png" alt="">
                 </div>
 
                 <div class="text-card_container">
