flower corner added

--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
             </svg>
               
             <div class="first-container">  
-                <div class="corner-flower">
+                <!-- <div class="corner-flower"> -->
                     <img class="flwr_1" src="src/style/elements/Recurso 5flwr.png" alt="">
-                </div>
+                    <img class="flwr_2" src="src/style/elements/Recurso 5flwr.png" alt="">
+                <!-- </div> -->
 
                 <div class="text-card_container">
                     <p class="intro">
