--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body class="the-body">
     <main>
         <section class="sctn sctn1">
-            div
+            <img class="red_up" src="src/style/elements/recurso_1.png" alt="">
+            <img class=" red_down" src="src/style/elements/recurso_1.png" alt="">
+
 
         </section>
         
