--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
                     <p class="reason">estas invitado a celebrar nuestra boda</p>
                     <h1 class="main-text">keisy<br><span class="y">&</span>luis</h1>  
                 </div>
+                <div class="date">
+                    
+                </div>
             </div>
-            
+
             <img class="abs watercolor1" src="src/style/elements/watercolor.png" alt="">
             <img class="abs watercolor2" src="src/style/elements/watercolor2.png" alt="">
             <img class="abs watercolor3" src="src/style/elements/watercolor3.png" alt="">
