--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
                     <svg class="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 401.67 402.39"><defs><linearGradient id="a" x1="8.92" y1="400.77" x2="8.92" y2="-57.45" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f1dd80"/><stop offset="0.2" stop-color="#a57d24"/><stop offset="0.27" stop-color="#a88128"/><stop offset="0.33" stop-color="#b18c33"/><stop offset="0.39" stop-color="#c1a045"/><stop offset="0.45" stop-color="#d6bb5f"/><stop offset="0.51" stop-color="#f1dd80"/><stop offset="0.52" stop-color="#fbf2a8"/><stop offset="0.59" stop-color="#f1dd80"/><stop offset="0.84" stop-color="#a57d24"/><stop offset="0.94" stop-color="#d8be62"/><stop offset="1" stop-color="#f1dd80"/></linearGradient><linearGradient id="b" x1="98.16" y1="400.77" x2="98.16" y2="-57.45" xlink:href="#a"/><linearGradient id="c" x1="310.63" y1="400.77" x2="310.63" y2="-57.45" xlink:href="#a"/><linearGradient id="d" x1="390.87" y1="400.78" x2="390.87" y2="-57.45" xlink:href="#a"/></defs><path d="M18 385a1 1 0 0 0-1-1c-1 0-12 0-15 3a5 5 0 0 0 4 9 5 5 0 0 0 9 5c4-4 3-15 3-16Z" fill="url(#a)"/><path d="M17 386a1 1 0 0 1-1 0 1 1 0 0 1 0-2l163-163a1 1 0 0 1 1 2L17 386Z" fill="url(#b)"/><path d="M230 172a1 1 0 0 1 0-1L390 10a1 1 0 1 1 1 1L231 172a1 1 0 0 1-1 0Z" fill="url(#c)"/><path d="m401 0-20 7a1 1 0 0 0-1 1 1 1 0 0 0 1 1l9 3 3 9a1 1 0 0 0 0 1 1 1 0 0 0 1-1l8-20a1 1 0 0 0-1-1Z" fill="url(#d)"/></svg>
                     <p class="reason">estas invitado a celebrar nuestra boda</p>
                     <h1 class="main-text">keisy<br><span class="y">&</span>luis</h1>  
-                </div>
-                <div class="date">
-                    
+                    <div class="date">
+                        <div class="date dia">20 Mayo 2023</div>
+                        <div class="separator"></div>
+                        <div class="date lugar">parroquia <span>san juan bosco</span></div>
+                        <div class="separator"></div>
+                        <div class="date hora">4:00 pm</span></div>
+                    </div>
                 </div>
             </div>
 
