--- a/index.html
+++ b/index.html
@@ -97,9 +97,32 @@
         </section>
 
         <section class="sctn sctn3">
-            <h2>
-                código de vestimenta
-            </h2>
+            <div class="content_sect3">
+                <svg class="dress_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 418.72 487.4"><title>Recurso 1dress</title><path d="M418.72,486.39c-12.06.38-24-.69-35-6-14.37-7-20.88-19.89-24.9-34.46-4.95-18-6.2-36.41-6.66-54.9-.6-23.82-.74-47.65-1.06-71.48a41,41,0,0,0-.87-9.91c-.46,17.31-.64,34.63-1.44,51.93-.95,20.6-1.86,41.24-3.87,61.76a87.49,87.49,0,0,1-12.43,37.62,48.25,48.25,0,0,1-28.66,21.9c-22.63,6.49-45.74,4.22-69.93,4.07,15.93-9.77,20.84-25,25.14-40.4,4.73-16.92,6.63-34.33,6.81-51.86q1-92.24,1.55-184.48c.12-22.43,7.58-42,21.49-59.31a6.54,6.54,0,0,1,4.51-2.1q33.26-.19,66.5,0a7.76,7.76,0,0,1,5.3,2.66c13.67,17.24,20.9,36.69,21.05,58.95q.6,95.24,1.94,190.48c.34,22.41,3.92,44.43,13.33,65.08C405.34,474.23,410.27,481.68,418.72,486.39Z"/><path d="M293.88,141.23c-5.9-22.66-12.68-44.64-17-67.1-2-10.25.53-21.49,1.81-32.18,1.65-13.68,4.12-27.26,6.32-41.44h14.82c1.16,25.58,4.79,50.4,25.2,70.53l-5.15,3c6-.59,11.56-4.77,16.86-12,8.88-12.11,13.32-25.95,15.27-40.64.91-6.9,1.29-13.86,2-21.34,4.44,0,8.74-.17,13,.12a3.91,3.91,0,0,1,2.58,2.67c2.66,18.76,4.91,37.58,7.75,56.32,1.82,12-1.93,23-4.82,34.27-3.85,15-7.6,29.95-11.57,44.87-.31,1.16-2,2.8-3,2.81C336.48,141.27,315,141.23,293.88,141.23Z"/><path d="M146.55,0c3.54,10.07,12.55,13.94,21.06,18.51,11,5.89,21.86,12,32.81,18,1.29.71,2.71,1.2,4.59,2q18.75,104.77,37.78,211.15L214.06,256,185.65,135.88c-.66,1.89-1.25,2.88-1.32,3.9-1.12,18.61-2.86,37.27,2.35,55.59.75,2.63.26,3.92-2.26,5-14.22,6-28.4,12.19-42.93,18.45-6.59-14.67-13.1-29.19-20.15-44.89-6.94,15.44-13.43,29.89-20.16,44.89L55.05,198.93c6.34-20.75,4.33-41.62,1.86-62.68C47.52,176,38.12,215.79,28.63,256L0,249.79c.81-5,1.52-9.91,2.38-14.74Q13,175.89,23.67,116.75c4.53-25.19,9-50.4,13.53-75.6a4.78,4.78,0,0,1,1.73-3.1c10.76-5.95,21.64-11.67,32.41-17.6C80.8,15.24,91.68,11.77,96.07.17c2.08,26.55,3.42,52.59,6.36,78.44s7.62,51.53,18.88,77.05c11.26-25.5,16-51.17,18.83-77.16S144.44,26.51,146.55,0Zm12.74,78.72h18.25V68.39Z"/><path d="M190.75,205.76c2.81,15.18,6.12,29.78,8.09,44.56a224.08,224.08,0,0,1-.69,66.22c-3.93,24-11.08,46.63-27.74,65.17a61.78,61.78,0,0,1-29.57,18.69c-1.24.35-2.55.49-4.4.83-7.86-43.73-10.74-87.68-15.06-131.55-4.55,43.75-7.21,87.72-15.18,131.55-11.53-1.89-20.74-7.2-28.85-14.49-13.94-12.53-22-28.64-27.35-46.25-8-26.18-9.24-52.95-7.13-80.08a286,286,0,0,1,9.81-54.31l52.07,22.36,16.57-36.87,16.58,36.86Z"/><path d="M142.06,25.7c-1.38,3.68-1.89,8.86-3.94,9.56-2.74.94-7-1-10-2.76-5.57-3.3-8-3.6-13.56.21-7.9,5.42-12.1,4-12.88-4.91-.3-3.47,1.72-7.14,2.68-10.72,3.65,1.16,7.87,1.52,10.82,3.65,4.9,3.54,7.73,4,12.25-.28.25-.23.47-.55.76-.64,3.25-1,6.95-3.29,9.64-2.44C139.87,18,140.65,22.69,142.06,25.7Z"/></svg>
+                <h2 class="dresscode">
+                    código de vestimenta
+                </h2>
+                <div class="half">
+                    <div class="men">
+                        <ul>
+                            <h3>hombres</h3>
+                            <li>guayabera<br>blanca</li>
+                        </ul>
+                    </div>
+                    <div class="line__container">
+                        <span class="line"></span>
+                    </div>
+                    <div class="women">
+                        <ul>
+                            <h3>mujeres</h3>
+                            <li>Vestido tipo<br>coctel</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <h3 class="reserva_color">color reservado vino tinto</h3>
+
+            </div>
 
         </section>
         <section class="sctn sctn4">
