--- a/index.html
+++ b/index.html
@@ -134,15 +134,24 @@
     
             </div>
             <div class="sc sctn4">
-                <h2>
-                    confirmar asistencia
-                </h2>
                 <div class="form">
+                    <h2>
+                        confirmar asistencia
+                    </h2>
 
                     <div class="check">
-                        <label for=""><input class="rad" type="radio" name="numPerson">1</label>
-                        <label for=""><input class="rad" type="radio" name="numPerson">2</label>
-                        <label for=""><input class="rad" type="radio" name="numPerson">3</label>
+                        <!-- <ul> -->
+                            <!-- <li> -->
+                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">1</label>
+                            <!-- </li> -->
+                            <!-- <li> -->
+                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">2</label>
+                            <!-- </li> -->
+                            <!-- <li> -->
+                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">3</label>
+                            <!-- </li> -->
+                        <!-- </ul> -->
+                        
                     </div>
                     <div class="invitado_1">
                         <label for="">invitado</label>
