--- a/index.html
+++ b/index.html
@@ -138,20 +138,22 @@
                     <h2>
                         confirmar asistencia
                     </h2>
+                    <p class="form_description">selecciona la cantidad de personas que asistirán</p>
 
                     <div class="check">
                                 <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">1</label>
                                 <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">2</label>
                                 <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">3</label>
+                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">4</label>
                     </div>
-                    <div class="invitado_1">
+                    <!-- <div class="invitado_1">
                         <label for="">invitado</label>
                         <input class="guest1" type="text">
                     </div>
                     <div class="invitado_1">
                         <label for="">invitado</label>
                         <input class="guest1" type="text">
-                    </div>
+                    </div> -->
                     <button class="btn" type="submit">CONFIRMAR</button>
                 </div>
     
