new rarios options

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
                                 <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">2</label>
                                 <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">3</label>
                                 <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">4</label>
+                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">5</label>
+                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">6</label>
+                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson">7</label>
                     </div>
                     <!-- <div class="invitado_1">
                         <label for="">invitado</label>
