--- a/index.html
+++ b/index.html
@@ -145,18 +145,22 @@
                     <h2 class="form_title">
                         confirmar asistencia
                     </h2>
-                    <p class="form_description">selecciona la cantidad de personas que asistirán</p>
-
+                    
                     <div class="check hide-checkMark">
-                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="1">1</label>
-                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="2">2</label>
-                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="3">3</label>
-                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="4">4</label>
-                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="5">5</label>
-                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="6">6</label>
-                                <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="7">7</label>
+                        <p class="form_description">selecciona la cantidad de personas que asistirán</p>
+                        <div class="group-choice">
+                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="1">1</label>
+                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="2">2</label>
+                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="3">3</label>
+                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="4">4</label>
+                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="5">5</label>
+                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="6">6</label>
+                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="7">7</label>
+                        </div>
                     </div>
                     <div class="type-list">
+                        <p class="form_description">Escriba los nombres de los asistentes</p>
+                        <div class="list-name">
                             <input class="guest1" type="text" placeholder="invitado 1">
                             <input class="guest1" type="text" placeholder="invitado 2">
                             <input class="guest1" type="text" placeholder="invitado 3">
@@ -164,6 +168,7 @@
                             <input class="guest1" type="text" placeholder="invitado 5">
                             <input class="guest1" type="text" placeholder="invitado 6">
                             <input class="guest1" type="text" placeholder="invitado 7">
+                        </div>
                     </div>
                     <button class="btn btn-confirm" type="submit">CONFIRMAR</button>
                 </form>
