--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="type-list">
-                        <p class="form_description">Escriba los nombres de los asistentes</p>
+                        <p class="list-people">Escriba los nombres de los asistentes</p>
                         <div class="list-name">
                             <input class="guest1" type="text" placeholder="invitado 1">
                             <input class="guest1" type="text" placeholder="invitado 2">
