--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
                             <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="6">6</label>
                             <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="7">7</label>
                         </div>
+                        <a class="selection-number" type="btn" href="" id="num-selection">seleccionar</a>
                     </div>
-                    <div class="type-list">
+                    <div class="type-list lst-hide">
                         <p class="list-people">Escriba los nombres de los asistentes</p>
                         <div class="list-name">
                             <input class="guest1" type="text" placeholder="invitado 1">
@@ -169,8 +170,8 @@
                             <input class="guest1" type="text" placeholder="invitado 6">
                             <input class="guest1" type="text" placeholder="invitado 7">
                         </div>
+                        <button class="btn btn-confirm" type="submit">CONFIRMAR</button>
                     </div>
-                    <button class="btn btn-confirm" type="submit">CONFIRMAR</button>
                 </form>
     
             </div>
