--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         confirmar asistencia
                     </h2>
                     
-                    <div class="check hide-checkMark">
+                    <div class="check " id="check">
                         <p class="form_description">selecciona la cantidad de personas que asistirán</p>
                         <div class="group-choice">
                             <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="1">1</label>
