labels generated by condition

--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
                     
                     <div class="check " id="check">
                         <p class="form_description">selecciona la cantidad de personas que asistirán</p>
-                        <div class="group-choice">
-                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="1">1</label>
-                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="2">2</label>
-                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="3">3</label>
-                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="4">4</label>
-                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="5">5</label>
-                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="6">6</label>
-                            <label class="label_check" for=""><input class="rad" type="radio" name="numPerson" id="select" value="7">7</label>
+                        <div class="group-choice" id="group-choice">
+                            <!-- <label class="label_check" ><input class="rad" type="radio" name="numPerson" id="select" value="1">1</label>
+                            <label class="label_check" ><input class="rad" type="radio" name="numPerson" id="select" value="2">2</label>
+                            <label class="label_check" ><input class="rad" type="radio" name="numPerson" id="select" value="3">3</label>
+                            <label class="label_check" ><input class="rad" type="radio" name="numPerson" id="select" value="4">4</label>
+                            <label class="label_check" ><input class="rad" type="radio" name="numPerson" id="select" value="5">5</label>
+                            <label class="label_check" ><input class="rad" type="radio" name="numPerson" id="select" value="6">6</label>
+                            <label class="label_check" ><input class="rad" type="radio" name="numPerson" id="select" value="7">7</label> -->
                         </div>
                         <a class="selection-number" type="btn" href="" id="num-selection">seleccionar</a>
                     </div>
