--- a/index.html
+++ b/index.html
@@ -192,6 +192,6 @@
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
     <script defer src="index.js"></script>
-    <script defer type="modules" src="index_2.js"></script>
+    <script defer type="module" src="index_2.js"></script>
 </body>
 </html>
