--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
     <footer class="footer-section">
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
-    <script defer src="index.js"></script>
-    <script defer type="module" src="index_2.js"></script>
+    <script defer  src="/src/style/style.js"></script>
+    <script defer type="module" src="index.js"></script>
+    <script defer type="module" src="firebase.js"></script>
 </body>
 </html>
