--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <!--***************** SECTION ONE (1) *****************-->
             <div class="sc sctn1">
                 <div class="content">
-                    <span class="versiculo" >
-                        <p class="cl-b">Tres cosas hay que permanecen: la fe, la esperanza y el amor.<br><span class="cita">1 Corintios 13:13</span></p>
+                    <span class="versiculo anim" data-delay=".4s">
+                        <p class="cl-b ">Tres cosas hay que permanecen: la fe, la esperanza y el amor.<br><span class="cita">1 Corintios 13:13</span></p>
                     </span>
                     <div class="first-container">
                         <!-- <svg class="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 401.67 402.39"><defs><linearGradient id="a" x1="8.92" y1="400.77" x2="8.92" y2="-57.45" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f1dd80"/><stop offset="0.2" stop-color="#a57d24"/><stop offset="0.27" stop-color="#a88128"/><stop offset="0.33" stop-color="#b18c33"/><stop offset="0.39" stop-color="#c1a045"/><stop offset="0.45" stop-color="#d6bb5f"/><stop offset="0.51" stop-color="#f1dd80"/><stop offset="0.52" stop-color="#fbf2a8"/><stop offset="0.59" stop-color="#f1dd80"/><stop offset="0.84" stop-color="#a57d24"/><stop offset="0.94" stop-color="#d8be62"/><stop offset="1" stop-color="#f1dd80"/></linearGradient><linearGradient id="b" x1="98.16" y1="400.77" x2="98.16" y2="-57.45" xlink:href="#a"/><linearGradient id="c" x1="310.63" y1="400.77" x2="310.63" y2="-57.45" xlink:href="#a"/><linearGradient id="d" x1="390.87" y1="400.78" x2="390.87" y2="-57.45" xlink:href="#a"/></defs><path d="M18 385a1 1 0 0 0-1-1c-1 0-12 0-15 3a5 5 0 0 0 4 9 5 5 0 0 0 9 5c4-4 3-15 3-16Z" fill="url(#a)"/><path d="M17 386a1 1 0 0 1-1 0 1 1 0 0 1 0-2l163-163a1 1 0 0 1 1 2L17 386Z" fill="url(#b)"/><path d="M230 172a1 1 0 0 1 0-1L390 10a1 1 0 1 1 1 1L231 172a1 1 0 0 1-1 0Z" fill="url(#c)"/><path d="m401 0-20 7a1 1 0 0 0-1 1 1 1 0 0 0 1 1l9 3 3 9a1 1 0 0 0 0 1 1 1 0 0 0 1-1l8-20a1 1 0 0 0-1-1Z" fill="url(#d)"/></svg> -->
                         <!-- <svg class="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 561.76 19.78"><defs><style>.a{fill:#c5986e;}</style><linearGradient id="a" x1="85.92" y1="209.52" x2="85.92" y2="-248.7" gradientTransform="translate(88.41 -193.55) rotate(45)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f1dd80"/><stop offset="0.2" stop-color="#a57d24"/><stop offset="0.27" stop-color="#a88128"/><stop offset="0.33" stop-color="#b18c33"/><stop offset="0.39" stop-color="#c1a045"/><stop offset="0.45" stop-color="#d6bb5f"/><stop offset="0.51" stop-color="#f1dd80"/><stop offset="0.52" stop-color="#fbf2a8"/><stop offset="0.59" stop-color="#f1dd80"/><stop offset="0.84" stop-color="#a57d24"/><stop offset="0.94" stop-color="#d8be62"/><stop offset="1" stop-color="#f1dd80"/></linearGradient><linearGradient id="b" x1="175.17" y1="209.52" x2="175.17" y2="-248.7" xlink:href="#a"/><linearGradient id="c" x1="387.63" y1="209.52" x2="387.63" y2="-248.7" xlink:href="#a"/><linearGradient id="d" x1="467.87" y1="209.52" x2="467.87" y2="-248.7" xlink:href="#a"/></defs><title>Recurso 18brush</title><path class="a" d="M18.41,10.27a.87.87,0,0,0,0-1.13C18.06,8.8,10.5.6,5.36.61a5.36,5.36,0,0,0-3.3,9.58A5.43,5.43,0,0,0,0,14.42a5.36,5.36,0,0,0,5.36,5.36C10.44,19.78,17.61,11.24,18.41,10.27Z"/><path class="b" d="M17.13,10.29a.86.86,0,0,1,.61-1.46H248.05a.86.86,0,0,1,0,1.72H17.74A.85.85,0,0,1,17.13,10.29Z"/><path class="c" d="M319.27,10.3a.86.86,0,0,1-.25-.61.85.85,0,0,1,.86-.86h227a.86.86,0,1,1,0,1.72h-227A.89.89,0,0,1,319.27,10.3Z"/><path class="d" d="M561.76,9.69a.86.86,0,0,0-.5-.78L542,.08a.86.86,0,0,0-1.1,1.22l5,8.39-5,8.39a.86.86,0,0,0,.1,1l0,0a.86.86,0,0,0,1,.18l19.29-8.83A.87.87,0,0,0,561.76,9.69Z"/></svg> -->
-                        <p class="cl-b familyName" id="value"></p>
+                        <p class="cl-b familyName anim" id="value" data-delay=".5s"></p>
                         <p class="cl-b reason anim" data-delay=".5s">estas invitado a celebrar nuestra boda</p>
                         <h1 class="main-text anim " data-delay="1.2s">
                             keisy<br>
@@ -147,7 +147,9 @@
                     <h2 class="form_title">
                         confirmar asistencia
                     </h2>
-                    <div class="sinlePerson">
+                    <div class="singlePerson">
+                        <!-- para personas individuales solo se inserta el
+                        nombre y se elimina el contenido debajo -->
 
                         <div class="check " id="check">
                             <p class="form_description">selecciona la cantidad de personas que asistirán</p>
