--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                                 <div class="separator"></div>
                                 <div class="date hora">4:00 pm</span></div>
                             </div>
-                            <h4 class="cl-b city">Cartagena de Indias</h4>
+                            <h4 class="cl-b city">Cartagena de Indias<br>
+                                <p class="parroquia"><span class="parrBold">parroquia</span>: san juan bosco</p>
+                                <p class="recepcion"><span class="recepBold">recepción</span>: banquetes con stylos, hora: 6:00pm</p>
+                            </h4>
                         </div>
                     </div>
                 </div>
