--- a/asistencia.html
+++ b/asistencia.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    ñeh
+    <div class="asistencia_list-container" id="asistencia_list-container">
+
+    </div>
 </body>
+<script type="module" src="index.js"></script>
 </html>
