--- a/asistencia.html
+++ b/asistencia.html
@@ -7,9 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="asistencia_list-container" id="asistencia_list-container">
+    <main>
+        <header class="asistencia_header">
+            <h1 class="asistencia_h1-titulo">
+                listado boda keisy & luis Miguel
+            </h1>
+        </header>
 
-    </div>
+        <div class="asistencia_list-container" id="asistencia_list-container">
+    
+        </div>
+    </main>
 </body>
 <script type="module" src="index.js"></script>
 </html>
