--- a/asistencia.html
+++ b/asistencia.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Parisienne&family=Passions+Conflict&family=Work+Sans:wght@100;200;300;500&family=Zen+Dots&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/style/css/main.css">
+    <link rel="shortcut icon" href="./src/style/elements/heart.ico">
+    <title>Listado de invitados</title>
 </head>
-<body>
-    <main>
+<body class="asistencia_body">
+    <main class="asistencia_main">
         <header class="asistencia_header">
             <h1 class="asistencia_h1-titulo">
-                listado boda keisy & luis Miguel
+                listado invitados keisy & luis Miguel
             </h1>
         </header>
 
         <div class="asistencia_list-container" id="asistencia_list-container">
-    
+            
         </div>
     </main>
 </body>
-<script type="module" src="index.js"></script>
+<script type="module" src="src/asistencia.js"></script>
 </html>
