--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </div>
                             <h4 class="cl-b city"><span class="bold-lugar">lugar</span>: Cartagena de Indias<br>
                                 <p class="parroquia"><span class="parrBold">parroquia</span>: san juan bosco</p>
-                                <p class="recepcion"><span class="recepBold">recepción</span>: banquetes con stylos, hora: 6:00pm</p>
+                                <p class="recepcion"><span class="recepBold">recepción</span>: banquetes con stylos,<br><span class="boldHora">hora</span>: 6:00pm</p>
                             </h4>
                         </div>
                     </div>
