--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <div class="date hora">4:00 pm</span></div>
                             </div>
                             <h4 class="cl-b city"><span class="bold-lugar">lugar</span>: Cartagena de Indias<br>
-                                <p class="parroquia"><span class="parrBold">parroquia</span>: san juan bosco</p>
+                                <!-- <p class="parroquia"><span class="parrBold">parroquia</span>: san juan bosco</p> -->
                                 <p class="recepcion"><span class="recepBold">recepción</span>: banquetes con stylos,<br><span class="boldHora">hora</span>: 6:00pm</p>
                             </h4>
                         </div>
@@ -224,6 +224,15 @@
     
 
             <div class="sc sctn-map">
+                <div class="data_recep">
+                    <svg class="mapIcon" xmlns="http://www.w3.org/2000/svg" 
+                     viewBox="0 0 24 24" "><path d="M12 14c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2z"></path><path d="M11.42 21.814a.998.998 0 0 0 1.16 0C12.884 21.599 20.029 16.44 20 10c0-4.411-3.589-8-8-8S4 5.589 4 9.995c-.029 6.445 7.116 11.604 7.42 11.819zM12 4c3.309 0 6 2.691 6 6.005.021 4.438-4.388 8.423-6 9.73-1.611-1.308-6.021-5.294-6-9.735 0-3.309 2.691-6 6-6z"></path></svg>
+                    <div class="">
+                        <h4 class="recepTitle">recepción</h4>
+                        <p class="texDir">Tv. 52 #32-18, santa lucía</p>
+                        <p class="texDir">cartagena de indias, provincia de cartagena, bolivar</p>
+                    </div>
+                </div>
                 <div class="mapouter">
                     <div class="gmap_canvas">
                         <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=parroquia%20san%20juan%20bosco%20cartagena&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
