money money but with effect

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                                 <div class="separator"></div>
                                 <div class="date lugar">parroquia <span>san juan bosco</span></div>
                                 <div class="separator"></div>
-                                <div class="date hora">4:00 pm</span></div>
+                                <div class="date hora">4:00 pm.</span></div>
                             </div>
-                            <h4 class="cl-b city"><span class="bold-lugar">lugar</span>: Cartagena de Indias<br>
+                            <h4 class="cl-b city"><span class="bold-lugar">lugar</span>: Cartagena de Indias.<br>
                                 <!-- <p class="parroquia"><span class="parrBold">parroquia</span>: san juan bosco</p> -->
-                                <p class="recepcion"><span class="recepBold">recepción</span>: banquetes con stylos,<br><span class="boldHora">hora</span>: 6:00pm</p>
+                                <p class="recepcion"><span class="recepBold">recepción</span>: banquetes con stylos,<br><span class="boldHora">hora</span>: 6:00pm.</p>
                             </h4>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                             </div>
                         </div>
         
-                        <h3 class="reserva_color">color reservado vino tinto</h3>
+                        <h3 class="reserva_color">color reservado vino tinto.</h3>
         
                     </div>
                     <div class="lluviaSobres anim" data-delay=".5s">
@@ -156,8 +156,10 @@
                         <h4 class="lluviaTitle">Lluvia de sobres</h4>
                         <p class="lluviaText">
                             Su presencia es lo más importante en este día tan especial, pero si algo nos quieren regalar, en efectivo lo sabremos apreciar...<br>
-                            Cuenta de ahorros Bancolombia: <span class="numaccount">09600015432</span><br>
-                            Keisy Rutto Caicedo
+                            <span class="lluviaSpan">
+                                Cuenta de ahorros Bancolombia: <span class="numaccount">09600015432</span><br>
+                                Keisy Rutto Caicedo.
+                            </span>
                         </p>
                     </div>
                 </div>
