--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         nombre y se elimina el contenido debajo -->
 
                         <div class="check " id="check">
-                            <p class="form_description">selecciona la cantidad de personas que asistirán</p>
+                            <p class="form_description">selecciona la cantidad de personas que asistirán.</p>
                             <div class="group-choice" id="group-choice">
                                 <!-- Check boxes generated here -->
                             </div>
@@ -243,7 +243,7 @@
                     <div class="">
                         <h4 class="recepTitle">recepción</h4>
                         <p class="texDir">Tv. 52 #32-18, santa lucía</p>
-                        <p class="texDir">cartagena de indias, provincia de cartagena, bolivar</p>
+                        <p class="texDir">cartagena de indias, provincia de cartagena, bolivar.</p>
                     </div>
                 </div>
                 <div class="mapouter">
