--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                             <a class="selection-number" type="btn" href="" id="num-selection">seleccionar</a>
                         </div>
                         <div class="type-list lst-hide">
+                            <span>Regresar</span>
                             <div class="goBack">
                                 <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m5 12 7 6v-5h6v-2h-6V6z"></path></svg>
                             </div>
