--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </div>
                             <h4 class="cl-b city"><span class="bold-lugar">lugar</span>: Cartagena de Indias.<br>
                                 <!-- <p class="parroquia"><span class="parrBold">parroquia</span>: san juan bosco</p> -->
-                                <p class="recepcion"><span class="recepBold">recepción</span>: banquetes con stylos<br><span class="boldHora">hora</span>: 6:00<span class="pm"> p.m.</span></p>
+                                <p class="recepcion"><span class="recepBold">recepción</span>: banquetes con stylos.<br><span class="boldHora">hora</span>: 6:00<span class="pm"> p.m.</span></p>
                             </h4>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             <span class="lluviaSpan">
                                 Cuenta de ahorros Bancolombia: <span class="numaccount">09600015432</span><br>
                                 Keisy Rutto Caicedo.<br>
-                                CC. <span class="numaccount">0000000</span>
+                                CC. <span class="numaccount">1124064363</span>
                             </span>
                         </h3>
                     </div>
