--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         &#169; 2023 | Designed & coded with &#9749; and &#128155; by Navarrowebdev
     </footer>
     <script defer  src="/src/style/style.js"></script>
-    <script defer type="module" src="index.js"></script>
-    <script defer type="module" src="firebase.js"></script>
+    <script defer type="module" src="src/scripts/index.js"></script>
+    <script defer type="module" src="src/scripts/firebase.js"></script>
 </body>
 </html>
