lista de invitados actualizada

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nova+Square&family=Parisienne&family=Passions+Conflict&family=Work+Sans:wght@100;200;300;500&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/style/css/main.css">
     <link rel="shortcut icon" href="./src/style/elements/heart.ico">
-    <title>Our announce</title>
+    <title>Keisy & Luis Miguel</title>
 </head>
 <body class="the-body">
     <main>
