--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <body>
     <main class="main-404">
         <h1  class="h1-404">
-            Oops! Nada que ver aqui.
+            Oops! Nada que ver aqui!
         </h1>
     </main>
 </body>
